# CRTranscribe

./: README.md  pyproject.toml  transcribe_fe.spec
CRTranscribe/: transcribe_fe.py
